--- a/HarbourWPF/HarbourWPF/MainWindow.xaml
+++ b/HarbourWPF/HarbourWPF/MainWindow.xaml
@@ -5,12 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HarbourWPF"
         mc:Ignorable="d"
-        Title="MainWindow" Height="800" Width="1000">
+        Title="MainWindow" Height="1000" Width="1000">
     <Grid>
-        <ListBox x:Name="startUpBoatsListBox" HorizontalAlignment="Left" Height="500" Margin="12,228,0,0" VerticalAlignment="Top" Width="415" FontSize="11" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" />
-        <Button x:Name="nextDayButton" Content="Nästa dag" HorizontalAlignment="Left" Margin="720,52,0,0" VerticalAlignment="Top" Width="70" Click="NextDayButton_Click" />
-        <ListBox x:Name="boatsAfterDepartureListBox" HorizontalAlignment="Left" Height="500" Margin="504,228,0,0" VerticalAlignment="Top" Width="374" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" />
-        <Button x:Name="exitButton" Content="Avsluta" HorizontalAlignment="Left" Height="20" Margin="720,88,0,0" VerticalAlignment="Top" Width="70" Click="ExitButton_Click"/>
+        <Button x:Name="nextDayButton" Content="Nästa dag" HorizontalAlignment="Left" Margin="868,703,0,0" VerticalAlignment="Top" Width="70" Click="NextDayButton_Click" />
+        <ListBox x:Name="boatsInHarbourListBox" HorizontalAlignment="Left" Height="684" Margin="12,272,0,0" VerticalAlignment="Top" Width="488" FontSize="11"/>
+        <ListBox x:Name="summaryListBox" HorizontalAlignment="Left" Height="486" Margin="526,470,0,0" VerticalAlignment="Top" Width="290"/>
 
     </Grid>
 </Window>
