--- a/HarbourWPF/HarbourWPF/MainWindow.xaml
+++ b/HarbourWPF/HarbourWPF/MainWindow.xaml
@@ -5,11 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HarbourWPF"
         mc:Ignorable="d"
-        Title="MainWindow" Height="1000" Width="1000">
+        Title="MainWindow" Height="1000" Width="1200">
     <Grid>
-        <Button x:Name="nextDayButton" Content="Nästa dag" HorizontalAlignment="Left" Margin="868,703,0,0" VerticalAlignment="Top" Width="70" Click="NextDayButton_Click" />
-        <ListBox x:Name="boatsInHarbourListBox" HorizontalAlignment="Left" Height="684" Margin="12,272,0,0" VerticalAlignment="Top" Width="488" FontSize="11"/>
-        <ListBox x:Name="summaryListBox" HorizontalAlignment="Left" Height="486" Margin="526,470,0,0" VerticalAlignment="Top" Width="290"/>
+        <Button x:Name="nextDayButton" Content="Nästa dag" HorizontalAlignment="Left" Margin="633,56,0,0" VerticalAlignment="Top" Width="70" Click="NextDayButton_Click" />
+        <ListBox x:Name="boatsInHarbourListBox" HorizontalAlignment="Left" Height="932" Margin="12,24,0,0" VerticalAlignment="Top" Width="488" FontSize="11"/>
+        <ListBox x:Name="summaryListBox" HorizontalAlignment="Left" Height="486" Margin="523,109,0,0" VerticalAlignment="Top" Width="290"/>
+        <Canvas x:Name="harbourCanvas" HorizontalAlignment="Left" Height="932" Margin="867,24,0,0" VerticalAlignment="Top" Width="296"/>
 
     </Grid>
 </Window>
